--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/db
+MONGO_URI=mongodb://127.0.0.1:27017/db
 PORT=5000
 JWT_SECRET=mysecretkey
 EMAIL_USER=belayketemateme44@gmail.com
@@ -6,3 +6,4 @@ EMAIL_PASS=osrp pfgr pprv wgsz
 FRONTEND_URL=http://localhost:3000
 REACT_APP_API_URL=http://localhost:5000
 REACT_APP_FRONTEND_URL=http://localhost:3000
+# MONGO_URI=mongodb://127.0.0.1:27017/yourdb
