--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,12 +35,12 @@
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "set PORT=3000 && react-scripts start",
+  "build": "react-scripts build && cross-env rimraf dist && mv build dist",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -61,7 +61,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17"
   }
 }
