--- a/backend/.env
+++ b/backend/.env
@@ -1,18 +1,8 @@
-MONGO_URI=mongodb+srv://beka:JnBYtSvP3KtYzlzb@cluster0.fp2yuuy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/db
 PORT=5000
 JWT_SECRET=mysecretkey
 EMAIL_USER=belayketemateme44@gmail.com
 EMAIL_PASS=osrp pfgr pprv wgsz
-FRONTEND_URL=http://localhost:3000
-REACT_APP_API_URL=http://localhost:5000
-REACT_APP_FRONTEND_URL=http://localhost:3000
-# Social Auth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-secret
-FACEBOOK_APP_ID=your-facebook-app-id
-FACEBOOK_APP_SECRET=your-facebook-secret
-TWITTER_CONSUMER_KEY=your-twitter-key
-TWITTER_CONSUMER_SECRET=your-twitter-secret
-
-# Session
-SESSION_SECRET=your-session-secret
+FRONTEND_URL=localhost:3000
+REACT_APP_API_URL=localhost:5000
+REACT_APP_FRONTEND_URL=localhost:3000
