--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -19,11 +20,12 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "date-fns": "^2.30.0",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.9.4",
     "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -35,12 +37,12 @@
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
   },
- "scripts": {
-  "start": "set PORT=3000 && react-scripts start",
-  "build": "react-scripts build && cross-env rimraf dist && mv build dist",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "start": "set PORT=3000 && react-scripts start",
+    "build": "react-scripts build && cross-env rimraf dist && mv build dist",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
