--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
