--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-csv": "^2.2.2",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.55.0",
