--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,12 +41,13 @@
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
-    "build": "react-scripts build && cross-env rimraf dist && mv build dist",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "scripts": {
+  "start": "set PORT=3000 && react-scripts start",
+"build": "GENERATE_SOURCEMAP=false react-scripts build && cross-env rimraf dist && shx mv build dist",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -71,5 +72,8 @@
     "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "resolutions": {
+  "react-datepicker": "4.8.0"
+}
 }
