--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ PORT=5000
 JWT_SECRET=mysecretkey
 EMAIL_USER=belayketemateme44@gmail.com
 EMAIL_PASS=osrp pfgr pprv wgsz
-FRONTEND_URL=localhost:3000
+FRONTEND_URL=https://eventmannagemnt-17.onrender.com
 REACT_APP_API_URL=localhost:5000
-REACT_APP_FRONTEND_URL=localhost:3000
+REACT_APP_FRONTEND_URL=https://eventmannagemnt-17.onrender.com
