--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-MONGO_URI=mongodb+srv://belayketemateme44:hf43yUlCoWVXhkcT@cluster0.taibhkf.mongodb.net/
-PORT=5000
-JWT_SECRET=mysecretkey
-EMAIL_USER=belayketemateme44@gmail.com
-EMAIL_PASS=osrp pfgr pprv wgsz
-FRONTEND_URL=http://localhost:3000
-REACT_APP_API_URL=localhost:5000
-REACT_APP_FRONTEND_URL=http://localhost:3000
+# MONGO_URI=mongodb+srv://belayketemateme44:hf43yUlCoWVXhkcT@cluster0.taibhkf.mongodb.net/
+# PORT=5000
+# JWT_SECRET=mysecretkey
+# EMAIL_USER=belayketemateme44@gmail.com
+# EMAIL_PASS=osrp pfgr pprv wgsz
+# FRONTEND_URL=http://localhost:3000
+# REACT_APP_API_URL=localhost:5000
+# REACT_APP_FRONTEND_URL=http://localhost:3000
