--- a/backend/package.json
+++ b/backend/package.json
@@ -31,5 +31,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": "18.x"  
   }
 }
