--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@
 # EMAIL_USER=belayketemateme44@gmail.com
 # EMAIL_PASS=osrp pfgr pprv wgsz
 # FRONTEND_URL=http://localhost:3000
-# REACT_APP_API_URL=localhost:5000
+# REACT_APP_API_URL=https://volunteershub-6.onrender.com
 # REACT_APP_FRONTEND_URL=http://localhost:3000
