--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,14 +40,12 @@
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
-  },
-"scripts": {
+  },"scripts": {
   "start": "cross-env PORT=3000 react-scripts start",
-  "build": "react-scripts build && cross-env rimraf dist && mv build dist || move build dist",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -67,17 +65,10 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "postcss": "^8.5.3",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17"
+    "rimraf": "^3.0.2"
   },
   "resolutions": {
-  "react-datepicker": "4.8.0"
-},
-"devDependencies": {
-  "cross-env": "^7.0.3",
-  "rimraf": "^3.0.2"
-}
+    "react-datepicker": "4.8.0"
+  }
 }
