--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-# MONGO_URI=mongodb+srv://belayketemateme44:1234@cluster0.8h6wpcz.mongodb.net/
+# MONGO_URI=mongodb+srv://belayketemateme44:1234@cluster0.8h6wpcz.mongodb.net/test?retryWrites=true&w=majority
+# # mongodb+srv://belayketemateme44:1234@cluster0.8h6wpcz.mongodb.net/test?retryWrites=true&w=majority
 # PORT=5000
 # JWT_SECRET=mysecretkey
 # EMAIL_USER=belayketemateme44@gmail.com
