--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-# MONGO_URI=mongodb+srv://belayketemateme44:1234@cluster0.8h6wpcz.mongodb.net/test?retryWrites=true&w=majority
-# PORT=5000
-# JWT_SECRET=mysecretkey
-# EMAIL_USER=belayketemateme44@gmail.com
-# EMAIL_PASS=osrp pfgr pprv wgsz
-# FRONTEND_URL=https://volunteershub-project.onrender.com
-# REACT_APP_API_URL=https://volunteershub-6.onrender.com
-# REACT_APP_FRONTEND_URL=https://volunteershub-project.onrender.com
+MONGO_URI=mongodb+srv://belayketemateme44:1234@cluster0.8h6wpcz.mongodb.net/test?retryWrites=true&w=majority
+PORT=5000
+JWT_SECRET=mysecretkey
+EMAIL_USER=belayketemateme44@gmail.com
+EMAIL_PASS=osrp pfgr pprv wgsz
+FRONTEND_URL=https://volunteershub-project.onrender.com
+REACT_APP_API_URL=https://volunteershub-6.onrender.com
+REACT_APP_FRONTEND_URL=https://volunteershub-project.onrender.com
