--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -33,6 +34,6 @@
     "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": "18.x"  
+    "node": "18.x"
   }
 }
